# metriko

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  example_ebd.cpp  example_frosy.cpp  example_igm.cpp  example_qex.cpp  example_qgp.cpp
include/metriko/core/common/: predicates.c  predicates.h  typedef.h  utilities.h
include/metriko/core/hmesh/: hmesh.cpp  hmesh.h  hmesh.ipp  utilities.h
include/metriko/core/igm/: parameterization.h  parameterization_integ.cpp  parameterization_integ.ipp  parameterization_setup.cpp  parameterization_setup.ipp
include/metriko/core/igm/iterative_rounding/: injective_barrier.h  iter_rounding.h  iter_rounding_common.h  iter_rounding_init.h  iter_rounding_loop.h
include/metriko/core/qex/: common.h  gen_q_edge.h  gen_q_face.h  gen_q_port.h  gen_q_vert.h  sanitization.h
include/metriko/core/quantization/: quantization.h  quantization_basisloop.h  quantization_constraint.h  quantization_evaluation.h  quantization_validation.h  quantization_weight.h
include/metriko/core/quantization/wip/: quantization_relinearization.h
include/metriko/core/solver/: common.h  levenberg_marquardt.h  matrix_ops.h  sparse_linear_solver.h
include/metriko/core/solver/suitesparse/: suitesparse_pdefinite.h  (+3 more)
include/metriko/core/tmesh/: motorcycle.cpp  motorcycle.h  motorcycle.ipp  tedge.h  thalf.h  tmesh.cpp  tmesh.h  tmesh.ipp  tquad.h
include/metriko/core/tutte/: convex_conbinatin_map.h  embedding.h  embedding_tutte.h  visualize_tedge_ebd.h
include/metriko/core/vectorfield/: base_field.h  face_rosy_field.cpp  face_rosy_field.h
(+7 files in other folders)
